Enter text and display in 2 section elements

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/styles/main.css">
-    <title>Document</title>
+    <title>Event Handlers</title>
 </head>
 <body>
-    
+    <!-- Create an input field in your DOM. Give it an id of message. -->
+    <label for="message">Input:</label>
+    <input id="message" title="Enter some amazing text">
+    <!-- Create two article elements with unique id values. 
+    Use Flexbox to display them in a row, each taking 50% of the width of the browser. -->
+    <div class="row">
+        <article id="firstArticle">ARTICLE1</article>
+        <article id="secondArticle">ARTICLE2</article>
+    </div>
     <script src="/scripts/main.js"></script>
 </body>
 </html>
